# wagtail-draftail-snippet

./: .gitignore  .travis.yml  CHANGELOG.md  Jenkinsfile  LICENSE  README.md  pyproject.toml  pytest.ini  setup.py  urls.py
.github/workflows/: shiftleft.yml
templates/wagtail_draftail_snippet/: choose_snippet_model.html
tests/: fixtures.py  test_settings.py  test_snippet_handlers.py  test_snippet_link_handler.py  test_wagtail_draftail_snippet.py  urls.py
tests/testapp/: factories.py  models.py
tests/testapp/templates/testapp/: advert_snippet.html  advert_snippet_embed.html
wagtail_draftail_snippet/: richtext.py  urls.py  utils.py  views.py  wagtail_hooks.py
wagtail_draftail_snippet/static/wagtail_draftail_snippet/js/: snippet-model-chooser-modal.js  wagtail-draftail-snippet.js  wagtail_draftail_snippet.js
wagtail_draftail_snippet/templates/wagtail_draftail_snippet/: results_snippet_model.html
