[tool.poetry]
name = "wagtail-draftail-snippet"
version = "0.2.1"
description = "Associate RichTextBlock text content to a snippet model."
authors = ["Parbhat Puri <me@parbhatpuri.com>", "Adam Hill <ahill@fool.com>"]
repository = "https://github.com/themotleyfool/wagtail-draftail-snippet"
readme = "README.md"
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
